<resources>
    <string name="app_name">Volunteer</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="log_in">Log In</string>
    <string name="register">Register</string>

    <string name="email">E-Mail Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">First Name</string>
    <string name="lastname">Last Name</string>

    <string name="main_menu_title">Welcome to PathFinder Volunteer</string>
    <string name="main_menu_subtitle">Login or Register to get started</string>
    <string name="login_title">Welcome Back!</string>
    <string name="login_subtitle">Login with your email to get started</string>
    <string name="register_title">Create an account</string>

    <string name="authenticating">Authenticating…</string>
    <string name="registering">Registering…</string>

    <string name="email_error">Enter a valid email address</string>
    <string name="password_error">Password need to be at least 8 characters.</string>
    <string name="no_name_enter_error">Please enter your name.</string>
    <string name="no_lastname_enter_error">Please enter your last name</string>
    <string name="confirm_password_error">Your password do not match.</string>
    <string name="email_already_used">Your e-mail is already used.</string>
    <string name="something_went_wrong">Something went wrong.</string>

    <string name="auth_failed">Login Failed</string>
    <string name="connection_error">Can\'t connect to the server.</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_user_found">No User Found.</string>
    <string name="profile_picture">Profile Image</string>
    <string name="title_activity_maps">Map</string>
    <string name="online_text">ONLINE</string>
    <string name="offline_text">OFFLINE</string>
    <string name="gps_network_not_enabled">GPS Network is not enabled</string>
    <string name="open_location_settings">Open</string>
    <string name="cancel">Cancel</string>
    <string name="accept_this_job">ACCEPT THIS JOB</string>
    <string name="directions">Directions</string>
    <string name="pick_up">Pick Up</string>
    <string name="no_btn">NO</string>
    <string name="yes_btn">YES</string>
    <string name="progress_dialog_title">Please Wait…</string>
    <string name="cancel_order_dialog_content">Are you sure you want to cancel this order?</string>
    <string name="cancel_order_dialog_title">Cancel This Order</string>
    <string name="cant_cancel_order_message">Can\'t cancel the order. Please try again later.</string>
    <string name="starting_order">Starting Order</string>
    <string name="calceling">Canceling</string>
    <string name="on_duty">On Duty…</string>
    <string name="completing">Completing…</string>
    <string name="error_completing_order">Error completing order. Please try again later.</string>
    <string name="log_out">Log Out</string>
    <string name="edit_profile">Edit Profile</string>
</resources>
