<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:src="@drawable/banner_white"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:id="@+id/app_logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/transparent_background"
        android:orientation="vertical"
        android:textAlignment="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/main_menu_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="16dp"
            android:text="@string/main_menu_subtitle"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/iron" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/log_in"
            android:id="@+id/loginBtn"
            android:textColor="@color/white" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/register"
            android:id="@+id/registerBtn"
            android:textColor="@color/white"/>

    </LinearLayout>

</RelativeLayout>
