<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/register_view">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/appBarLayout"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:elevation="0dp">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/banner_white" />


        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/transparent_background"
        android:textAlignment="center"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="40dp"
            android:text="@string/register_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/register_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textAlignment="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_below="@id/register_title"
            android:id="@+id/register_form">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:theme="@style/AppTheme.FormEditText">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:theme="@style/AppTheme.FormEditText"
                    app:passwordToggleTint="@color/white">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/register_input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/white"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:theme="@style/AppTheme.FormEditText"
                    app:passwordToggleTint="@color/white">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/register_input_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:textColor="@color/white"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:theme="@style/AppTheme.FormEditText"
                    app:passwordToggleTint="@color/white">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/register_input_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:textColor="@color/white"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:theme="@style/AppTheme.FormEditText"
                    app:passwordToggleTint="@color/white">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/register_input_lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/lastname"
                        android:inputType="text"
                        android:textColor="@color/white"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_register"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="12dp"
            android:text="@string/register" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>